<resources>
    <string name="app_name">FIUBER</string>
    <string name="saved_data">archivoPersistente</string>

    <!-- Strings related to main side menu -->
    <string name="menu_perfil">Mi perfil</string>
    <string name="menu_configuracion">Configuración</string>
    <string name="menu_logout">Cerrar sesión</string>
    <string name="menu_autos">Mis autos</string>
    <string name="menu_chat">Mensajes</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="error_field_required">Campo necesario</string>
    <string name="cancel_login">Proceso cancelado</string>
    <string name="error_login">Ocurrió un error</string>
    <string name="error_empty_password">Ingrese su contraseña</string>

    <!-- Strings related to Facebook login -->
    <string name="facebook_app_id">772599149578608</string>
    <string name="fb_login_protocol_scheme">fb772599149578608</string>

    <!-- Strings related to register -->
    <string name="register_text">¿No tienes cuenta? Regístrate</string>
    <string name="register_in_mail">Mail</string>
    <string name="register_in_nombre">Nombre</string>
    <string name="register_in_apellido">Apellido</string>
    <string name="opc_chofer">Chofer</string>
    <string name="opc_pasajero">Pasajero</string>
    <string name="register_in_cuentaFace">Cuenta de Facebook</string>
    <string name="info_auto">Información sobre el auto</string>
    <string name="info_personal">Información personal</string>
    <string name="register_in_modelo">Modelo del auto</string>
    <string name="register_in_color">Color del auto</string>
    <string name="register_in_patente">Patente del auto</string>
    <string name="register_in_anio">Año del auto</string>
    <string name="register_in_usuario">Usuario</string>
    <string name="register_in_contrasenia">Contraseña</string>
    <string name="register_in_fechaNacimiento">Fecha de nacimiento</string>
    <string name="estado1">Malo</string>
    <string name="estado2">Regular</string>
    <string name="estado3">Bueno</string>
    <string name="register_estado">Estado</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="register_aire">Aire acondicionado</string>
    <string name="register_in_musica">Música escuchada en el auto</string>
    <string name="info_cobranza">Información para pagos</string>
    <string name="register_in_tarjetaCredito">Número de su tarjeta de crédito</string>
    <string name="register_btn">Registrarse</string>
    <string name="registo_usr_exitoso">Usuario registrado correctamente</string>
    <string name="registo_usr_error">Error al intentar registrar el usuario</string>


    <string name="title_activity_maps">FIUBER</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <!-- Strings related to Map screen -->
    <string name="buscar_ruta">Buscar ruta</string>
    <string name="km_ruta">0 km</string>
    <string name="min_ruta">0 min</string>
    <string name="confirmar_viaje">Confirmar viaje</string>

    <!-- Strings related to Perfil screen -->
    <string name="profile_save">Guardar cambios</string>
    <string name="modificacion_usr_exitoso">Cambios guardados exitosamente</string>
    <string name="modificacion_usr_error">Error al modificar los datos</string>
    <string name="modificacion_usr_datos_incompletos">Datos incompletos</string>
    <string name="unable_delete_car">Mínimo un auto</string>
    <string name="registo_auto_exitoso">Auto registrado correctamente</string>
    <string name="registo_auto_error">Error al registrar auto</string>
    <string name="menu_pagos">Pagos</string>
    <string name="payment_fechaVencimiento">Fecha de vencimiento</string>
    <string name="payment_codSeguridad">Codigo de seguridad</string>
    <string name="registo_payment_erroneo">Completar todos los campos</string>
    <string name="fecha_payment_erroneo">Fecha inválida</string>
    <string name="sin_viajes">No hay viajes</string>
    <string name="no_cars">No existen autos</string>
    <string name="no_choferes">No hay choferes disponibles</string>
    <string name="viaje_aceptado">Su viaje a sido aceptado</string>
    <string name="viaje_rechazado">Su viaje ha sido rechazado</string>
    <string name="payment_add">Metodo de pago agregado</string>
    <string name="payment_error">Error al agregar metodo de pago</string>

</resources>
