<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pasajeroregistro"
    android:orientation="vertical"
    tools:context="com.taller.fiuber.RegisterActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        app:srcCompat="@drawable/logochico"
        tools:ignore="ContentDescription" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/registerP_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/infoP_personal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_personal"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/regP_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_in_usuario"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/regP_contrasenia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_in_contrasenia"
                android:inputType="textPassword"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/regP_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_in_mail"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/regP_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_in_nombre"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/regP_apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_in_apellido"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/regP_cuentaFacebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_in_cuentaFace"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:layout_width="365dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/regP_fechaNacimiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_in_fechaNacimiento"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnPFecha"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/date_icon"/>

        </LinearLayout>

        <TextView
            android:id="@+id/info_cobranza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/info_cobranza"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/regP_tarjetaCredito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_in_tarjetaCredito"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/regP_btn_registrarse"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/buttonshapepasajero"
            android:text="@string/register_btn"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_gravity="center"/>

    </LinearLayout>
</ScrollView>
</LinearLayout>